--- a/playground/static/index.css
+++ b/playground/static/index.css
@@ -49,7 +49,7 @@ html {
 }
 
 .right_section {
-    
+    background-color:red;
     width: 100%;
     height: 100%;
 }
@@ -57,7 +57,7 @@ html {
 .content {
     width: 100%;
     background-color: #242424;
-    height: 80%;
+    height: 80vh;
     padding:5rem;
     box-sizing: border-box;
     position: relative;
@@ -89,7 +89,7 @@ html {
 
 .entry {
     width: 100%;
-    height: 20%;
+    height: 20vh;
     background-color: #242424;
     display: grid;
     place-items: center;
@@ -118,6 +118,8 @@ input::placeholder{
 }
 #form_group{
     position: relative;
+    width:100vw;
+    height:100%;
 }
 #submit_button{
     position: absolute;
