--- a/playground/static/login.css
+++ b/playground/static/login.css
@@ -29,7 +29,7 @@
 }
 
 .content {
-    paddpything: 1rem;
+    padding: 1rem;
     box-sizing: border-box;
     position: absolute;
     height: 100%;
