--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -17,18 +17,18 @@
 
     <div class="container">
         <div class="header">
-            <div class="logo"><img src="/media/logo-removebg.png" height="35px"></img>LawMiner</div>
+            <div class="logo"><img src="/media/logo-removebg.png" height="35px"></img>Tele-Med</div>
         </div>
         <div class="main">
 
 
-            <div class="right_section" style="background: url('https://wallpaperset.com/w/full/1/a/e/529286.jpg');">
+            <div class="right_section" > 
     <form id="form_group" onsubmit="getanswer()" method="POST" action="">
                         {% csrf_token %}
                 <div class="content" style="background: url('https://wallpaperset.com/w/full/1/a/e/529286.jpg');">
                     <div class="info">
                         {% comment %} <pre> {{som}}</pre> {% endcomment %}
-                        <textarea style="background: url('https://wallpaperset.com/w/full/1/a/e/529286.jpg');" id="textarea_id"  name="data" >{{formValue}}</textarea>
+                        <textarea style="background: url('https://wallpaperset.com/w/full/1/a/e/529286.jpg');" id="textarea_id"  name="data" >{{formValue}}</textarea> 
                     </div>
                 </div>
 
