--- a/playground/templates/login.html
+++ b/playground/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tele-Med</title>
     {% load static  %}
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
     <link rel="stylesheet" href="{% static 'login.css' %}">
@@ -19,7 +19,7 @@
         <div class="header" style="color: white;">
             <header class="header-text"
                 style="height: 100%;background-color: rgb(21, 21, 21);display: flex;align-items: center;justify-content: center;font-size: 2rem;">
-                <img src="media/logo-removebg.png" height="25px"></img>LawMiner
+                <img src="media/logo-removebg.png" height="25px"></img>Tele-Med
             </header>
         </div>
         <div class="main">
@@ -30,9 +30,9 @@
                     <div id="centerSection">
                         <div id="centerSectionText" data-aos="fade-up">
                             <!-- data-aos="fade-in" -->
-                            <h1>LawMiner</h1>
-                            The chatbot utilizes a BERT-based AI model to analyze the posed question and generate a suitable response based on the provided content:<br>
-                            *Pretrained BERT model for question answering.<br>
+                            <h1>Tele-Med</h1>
+                            The chatbot utilizes an open AI model to analyze the provided symptoms and generate a suitable prescription based on the provided content:<br>
+                            *Pretrained AI model for prescription.<br>
                             *Text preprocessing to clean and format the extracted text.
 
                         </div>
