--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="header">
-            <div class="logo"><img src="/media/logo-removebg.png" height="35px"></img>Tele-Med</div>
+            <div class="logo"><img src="/media/logo-removebug.png" height="35px">Tele-Med</div>
         </div>
         <div class="main">
 
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <div class="entry" >
+                <div class="entry" style="background: url('https://wallpaperset.com/w/full/1/a/e/529286.jpg');" >
 
                         <input type="text" placeholder="enter the text" id="entryField" name="entryField">
                         <input type="submit" id="submit_button" value="&#11000" name="submit_button">
