--- a/playground/templates/login.html
+++ b/playground/templates/login.html
@@ -31,8 +31,8 @@
                         <div id="centerSectionText" data-aos="fade-up">
                             <!-- data-aos="fade-in" -->
                             <h1>Tele-Med</h1>
-                            The chatbot utilizes an open AI model to analyze the provided symptoms and generate a suitable prescription based on the provided content:<br>
-                            *Pretrained AI model for prescription.<br>
+                            The chatbot utilizes an open AI model to analyze the provided symptoms and provide a suitable diagnosis based on the provided content:<br>
+                            *Pretrained AI model for diagnosis.<br>
                             *Text preprocessing to clean and format the extracted text.
 
                         </div>
