Some more changes

--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -7,7 +7,7 @@
     <title>Tele-Med</title>
     <link rel="stylesheet" >
     {% load static  %}
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
+    <link rel="shortcut icon" type="/media/jpg" href="{% static '/media/Tele-Med.jpg' %}" >
     <link rel="stylesheet" href="{% static 'index.css' %}">
     
     <script src="https://kit.fontawesome.com/b09e468a2d.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="header">
-            <div class="logo"><img src="/media/logo-removebug.png" height="35px">Tele-Med</div>
+            <div class="logo"><img src="/media/Tele-Med.jpg" height="35px">Tele-Med</div>
         </div>
         <div class="main">
 
