--- a/playground/templates/login.html
+++ b/playground/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tele-Med</title>
     {% load static  %}
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
+    <link rel="shortcut icon" type="/media/jpg" href="{% static '/media/Tele-Med.jpg' %}" >
     <link rel="stylesheet" href="{% static 'login.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -19,7 +19,7 @@
         <div class="header" style="color: white;">
             <header class="header-text"
                 style="height: 100%;background-color: rgb(21, 21, 21);display: flex;align-items: center;justify-content: center;font-size: 2rem;">
-                <img src="media/logo-removebg.png" height="25px"></img>Tele-Med
+                <img src="/media/Tele-Med.jpg" height="35px"></img>Tele-Med
             </header>
         </div>
         <div class="main">
